--- a/style.css
+++ b/style.css
@@ -1,20 +1,11 @@
 body {
-    background-image: url("bg-c2.jpg");
+    background-image: url("images/bg-c2.jpg");
     background-color: #cccccc;
     background-size: cover;
 }
 
-.footer {
-    position: fixed;
-     bottom: 0;
-     width: 100%;
-     height: 60px;
-     line-height: 60px;
-     background-color: #f5f5f5;
-}
-
 h3, #bio {
-   font-family: trebuchet MS, sans-serif
+   font-family: trebuchet MS, sans-serif;
 }
 
 .card {
@@ -30,15 +21,30 @@ h3, #bio {
     color: slategrey;
 }
 
-img{
+#profile-pic{
     max-width: 350px;
 }
 
-.card{
-    background-color: whitesmoke
+.card, .alert{
+    background-color: whitesmoke;
 }
 
   /* Add a hover effect if you want */
 .fa:hover {
     opacity: 0.7;
+}
+
+.alert-link{
+    font-family: Andale Mono, monospace;
+    font-size: 14px;
+    color: slategrey;
+}
+
+/* #slide-show {
+    height: 500px;
+} */
+
+#slides { 
+    max-height: 600px;
+    max-width: 700px;
 }
