--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ h3, #bio {
    font-family: trebuchet MS, sans-serif;
 }
 
-.card {
+.repo {
+    font-family: trebuchet MS, sans-serif;
+    color: slategrey;
+}
+
+#bio-card {
     width: 80%;
 }
 
@@ -38,13 +43,4 @@ h3, #bio {
     font-family: Andale Mono, monospace;
     font-size: 14px;
     color: slategrey;
-}
-
-/* #slide-show {
-    height: 500px;
-} */
-
-#slides { 
-    max-height: 600px;
-    max-width: 700px;
 }
