added go back to main button inside of work page

--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ h3, #bio {
     color: slategrey;
 }
 
+.go-back{
+    font-family: trebuchet MS, sans-serif;
+    color: white;
+    background-color: lightgray;
+}
+
 #bio-card {
     width: 80%;
 }
