--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h3, #bio {
 .go-back{
     font-family: trebuchet MS, sans-serif;
     color: white;
-    background-color: lightgray;
+    background-color: grey;
 }
 
 #bio-card {
